layout shift fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,8 +55,9 @@
     height: 100% !important;
 }
 
-swiper-container{
+#swiper-container{
     display: block;
     height: 550px;
     overflow: hidden;
 }
+
